--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="number">2</div>
             <div class="number">3</div>
             <div class="calcfunc">-</div>
-            <div></div>
+            <div id="clear">Clear</div>
             <div class="number">0</div>
             <div class="equals">=</div>
             <div class="calcfunc">+</div>            
